<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="@color/tab_bg" >
	
    <RelativeLayout 
        android:id="@+id/banner"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/banner_bg_light">
        
        <ImageButton 
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:layout_alignParentLeft="true"
        	android:layout_centerVertical="true" 
        	android:layout_marginLeft="15dp"/>
        
        <TextView 
            android:id="@+id/main_tab_banner_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advice_title"
            android:textSize="25sp"
            android:textColor="#ffffff"
			android:layout_centerInParent="true"/>
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            >
            
            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:text="标签："
	            android:textSize="20sp"
	            android:textColor="@color/light_black"
	            ></TextView>
            
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true"
                >
                
                <TextView 
                    android:id="@+id/advice_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="建议"
        			android:background="@drawable/radis_border"
        			android:layout_marginLeft="15dp"
        			android:textColor="@color/platform_chosen"
                    />
                
                <TextView 
                    android:id="@+id/wrong_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="出错"
        			android:background="@drawable/radis_border"
        			android:layout_marginLeft="15dp"
        			android:textColor="@color/light_black"
                    />
                
                <TextView 
                    android:id="@+id/help_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="帮助"
        			android:background="@drawable/radis_border"
        			android:layout_marginLeft="15dp"
        			android:textColor="@color/light_black"
                    />
            </LinearLayout>
        </RelativeLayout>
        
        
        <EditText 
            android:id="@+id/advice"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:hint="感谢您对网贷篮子的支持，点击输入反馈..."
        	android:background="@drawable/radis_border"
            android:inputType="textMultiLine"
            android:gravity="left|top"
            />
        
    </LinearLayout>
    
    <RelativeLayout 
	            android:layout_width="match_parent"
	        	android:layout_height="50dp"
	        	android:orientation="horizontal">
            
		            <TextView 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/user_item_02"
		                android:textSize="20sp"
		                android:textColor="@color/light_black"
		                android:layout_alignParentLeft="true"
		                android:layout_marginLeft="10dp"
		                android:layout_centerVertical="true"		                
		                />
		            
		            <TextView
		                android:id="@+id/account"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						android:layout_marginRight="10dp"
						android:text="castiel.zyf@gmail.com"
						android:textSize="18sp"
		                android:layout_centerVertical="true"
		                 />           
	       </RelativeLayout>
	       <ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/tab_line"
				android:layout_marginTop="5dp"
				android:layout_marginBottom="5dp"
				/>
	       
	       <Button
            android:id="@+id/send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advice_button"
            android:textColor="@color/white"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp"
        	android:layout_marginTop="25dp"
        	android:background="#ec971f" />
</LinearLayout>
